Fixed position displacement when scrollbar appears

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,9 @@
+html {
+  overflow-x: hidden;
+  width: auto !important;
+  margin-right: calc(-1 * (100vw - 100%));
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
